@@ -545,8 +545,8 @@ public class VTreeBOM extends CPanel implements FormPanel, ActionListener,
 
 		
 		Vector<Object> line = new Vector<Object>(17);
-		line.add( new Boolean(false));  //  0 Select
-		line.add( new Boolean(M_Product.isActive()));   //  1 IsActive
+		line.add(Boolean.FALSE);  //  0 Select
+		line.add(Boolean.valueOf(M_Product.isActive()));   //  1 IsActive
 		line.add(Integer.valueOf(0)); // 2 Line
 		KeyNamePair pp = new KeyNamePair(M_Product.getM_Product_ID(),M_Product.getValue().concat("_").concat(M_Product.getName()));
 		line.add(pp); //  3 M_Product_ID
@@ -640,8 +640,8 @@ public class VTreeBOM extends CPanel implements FormPanel, ActionListener,
 
 		
 		Vector<Object> line = new Vector<Object>(17);
-		line.add( new Boolean(false));  //  0 Select
-		line.add( new Boolean(M_Product.isActive()));   //  1 IsActive
+		line.add(Boolean.FALSE);  //  0 Select
+		line.add(Boolean.valueOf(M_Product.isActive()));   //  1 IsActive
 		line.add(Integer.valueOf(0)); // 2 Line
 		KeyNamePair pp = new KeyNamePair(M_Product.getM_Product_ID(),M_Product.getValue().concat("_").concat(M_Product.getName()));
 		line.add(pp); //  3 M_Product_ID
@@ -699,8 +699,8 @@ public class VTreeBOM extends CPanel implements FormPanel, ActionListener,
 		MProduct M_Product = MProduct.get(getCtx(), bomline.getM_ProductBOM_ID());
 
 		Vector<Object> line = new Vector<Object>(17);
-		line.add( new Boolean(false));  //  0 Select
-		line.add( new Boolean(bomline.isActive()));   //  1 IsActive
+		line.add(Boolean.FALSE);  //  0 Select
+		line.add(Boolean.valueOf(bomline.isActive()));   //  1 IsActive
 		line.add(Integer.valueOf(bomline.getLine())); // 2 Line
 		KeyNamePair pp = new KeyNamePair(M_Product.getM_Product_ID(),M_Product.getValue().concat("_").concat(M_Product.getName()));
 		line.add(pp); //  3 M_Product_ID
@@ -728,8 +728,8 @@ public class VTreeBOM extends CPanel implements FormPanel, ActionListener,
 		MProduct M_Product = MProduct.get(getCtx(), bom.getM_Product_ID());
 
 		Vector<Object> line = new Vector<Object>(17);
-		line.add( new Boolean(false));  //  0 Select
-		line.add( new Boolean(M_Product.isActive()));   //  1 IsActive
+		line.add(Boolean.FALSE);  //  0 Select
+		line.add(Boolean.valueOf(M_Product.isActive()));   //  1 IsActive
 		line.add(Integer.valueOf(bom.getLine())); // 2 Line
 		KeyNamePair pp = new KeyNamePair(M_Product.getM_Product_ID(),M_Product.getValue().concat("_").concat(M_Product.getName()));
 		line.add(pp); //  3 M_Product_ID
