@@ -644,7 +644,7 @@ implements FormPanel, ActionListener, VetoableChangeListener, ChangeListener, Li
 							p_table.setColumnReadOnly(0, false);
 						}        
 						else if (c == Boolean.class)
-							data = new Boolean("Y".equals(rs.getString(colIndex)));
+							data = Boolean.valueOf("Y".equals(rs.getString(colIndex)));
 						else if (c == Timestamp.class)
 							data = rs.getTimestamp(colIndex);
 						else if (c == BigDecimal.class)
